# SciTaskIO

./: README.md
python/: pyproject.toml
python/examples/: basic_usage.py
python/examples/output/: demo_series.json  frequencies.npy
python/examples/output/processed/: frequencies.npy
python/examples/output/processed_from_series/: space.npy
python/src/sci_task_io/: __init__.py
python/src/sci_task_io/model/: __init__.py  label_and_path_mapper.py  model.py  model_cluster.py
python/src/sci_task_io/ssts/: __init__.py  checkpoint_utils.py  io_json.py  io_npy.py  ssts.py  ssts_series.py  validation.py
rust/: Cargo.toml
rust/examples/: basic_usage.rs  series_usage.rs
rust/src/: lib.rs
rust/src/ssts/: checkpoint.rs  io_json.rs  mod.rs  series.rs  ssts.rs  tests.rs  validation.rs
schema/: schema.md  signal_label.npy.schema.md  ssts.json.schema
schema/fixtures/contract/: README.md
schema/fixtures/contract/invalid/: bad_track_key.json  missing_label.json  times_signal_len_mismatch.json
schema/fixtures/contract/valid/: minimal.json  multi_track.json  with_scalars.json
