[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sci-task-io"
version = "0.1.0"
description = "Standardized scientific time-series IO for SSTS"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
